--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ body {
 /* Controller settings for the block. */
 #block-settings-custom {
   /* All editors should be the same height */
-  height: 175px;
+  height: 190px;
 }
 .editorDiv {
   text-align: center;
@@ -589,14 +589,14 @@ SOFTWARE.
   fill: #BA4A00;
   stroke: #873600;
   stroke-width: 4;
-  transition: stroke 0.3s ease;
+  transition: stroke 0.4s ease;
   stroke-linejoin: round;
 }
 .identity-block {
   fill: #492f27;
 }
 .selected-block {
-  transition: stroke 0.3s ease;
+  transition: stroke 0.4s ease;
   stroke-width: 4;
   stroke: #29B6F6;
 }
@@ -665,28 +665,66 @@ SOFTWARE.
   margin-left: 20px;
   text-align: center;
 }
+.calc-shell {
+  stroke-width: 4;
+  stroke: #873600;
+  fill: #BA4A00;
+  stroke-linejoin: round;
+}
+.calc-keybase {
+  stroke-width: 4;
+  stroke: #873600;
+  fill: #873600;
+  stroke-linejoin: round;
+}
+.calc-vars {
+  stroke-width: 2;
+  fill: #42A5F5;
+  stroke: #4527A0;
+  stroke-linejoin: round;
+}
+.calc-vars-text {
+  font-family: "Font Awesome 5 Free", "Helvetica";
+  text-align: center;
+  font-size: 30px;
+  fill: #FFFFFF;
+}
+.calc-operand {
+  stroke-width: 2;
+  stroke: #873600;
+  fill: #BA4A00;
+}
+.calc-operand-text {
+  font-family: "Font Awesome 5 Free", "Helvetica";
+  text-align: center;
+  font-size: 30px;
+  fill: #FFB74D;
+}
+.calc-numbers {
+  stroke-width: 2;
+  stroke: #873600;
+  fill: #000000;
+}
+.calc-numbers-text {
+  font-family: "Font Awesome 5 Free", "Helvetica";
+  text-align: center;
+  font-size: 30px;
+  fill: #FFB74D;
+}
 .vars-dropdown-comparison {
   margin-left: 5px;
   width: 75px;
 }
-.vars-var-text {
+.vars-poly-text {
   font-family: "Font Awesome 5 Free", "Helvetica";
   text-align: center;
   font-size: 30px;
-  fill: #FFF;
+  fill: #FFFFFF;
 }
-.vars-front-fill {
-  stroke-width: 2;
-  stroke: #0087d6;
-  /* 00a0ff */
-  fill: #0087d6;
-  stroke-linejoin: round;
-}
-.vars-back-fill {
-  stroke-width: 2;
-  stroke: #005789;
-  /* 0074BA */
-  fill: #005789;
+.vars-poly {
+  stroke-width: 4;
+  fill: #42A5F5;
+  stroke: #4527A0;
   stroke-linejoin: round;
 }
 .vars-bottom-txt {
@@ -695,11 +733,10 @@ SOFTWARE.
   fill: #FFB74D;
   stroke-width: 0;
 }
-.printBlock-var-text {
-  font-family: "Font Awesome 5 Free", "Helvetica";
-  text-align: center;
-  font-size: 20px;
-  fill: #FFF;
+.expr-region {
+  stroke-width: 1;
+  stroke: #FFB74D;
+  fill: #BA4A00;
 }
 .dropdown-label-txt {
   float: left;
@@ -782,13 +819,13 @@ SOFTWARE.
   margin-top: -10px;
 }
 .block-picture-board {
-  fill: #332222;
+  fill: #000000;
 }
 .block-picture-led-off {
-  fill: #641e16;
+  fill: #332222;
 }
 .block-picture-led-on {
-  fill: #FF3366;
+  fill: #FF4040;
 }
 .block-bot-connection-error {
   fill: #FF5722;
