--- a/style.css
+++ b/style.css
@@ -772,32 +772,20 @@ SOFTWARE.
 }
 .printBlock-buttons {
   float: left;
-  display: inline-block;
   background-color: #81C784;
-  margin-left: 10px;
-  margin-top: 20px;
-  height: 70px;
-  width: 220px;
+  margin-left: 5px;
+  margin-top: 0px;
+  height: 170px;
   border-radius: 10px;
 }
 .printBlock-option {
-  display: inline-block;
-  float: left;
-  font-family: "Font Awesome 5 Free", "Helvetica";
   border: solid #000;
   border-width: 3px;
   border-radius: 10px;
-  margin: 10px 9.5px;
-  width: 85px;
-  height: 45px;
+  margin: 10px 8px;
+  padding: 5px 7px;
   background-color: #FFF8E1;
   font-size: 25px;
-}
-.data-option {
-  display: inline-block;
-  font-size: 40px;
-  padding-top: 4px;
-  padding-left: 2px;
 }
 .printBlock-icon {
   font-family: "Font Awesome 5 Free", "Helvetica";
@@ -817,13 +805,12 @@ SOFTWARE.
 .printBlock-dropdown {
   border-width: 6px;
   float: left;
-  width: 220px;
-  height: 70px;
+  width: 120px;
+  height: 60px;
   font-family: "Helvetica";
-  font-size: 25px;
+  font-size: 30px;
   text-align-last: center;
-  margin-left: 10px;
-  margin-top: 15px;
+  margin-left: 30px;
   text-align: center;
 }
 .varAdd-label-txt {
@@ -907,13 +894,6 @@ SOFTWARE.
   font-family: "Font Awesome 5 Free", "Helvetica";
   font-size: 20px;
   stroke-width: 0;
-}
-.block-motor-text-type {
-  font-family: "Helvetica";
-  font-size: 11px;
-  stroke: #000;
-  fill: #000;
-  stroke-width: 1px;
 }
 .block-wait-text {
   font-family: "Font Awesome 5 Free", "Helvetica";
